Use universal charset detector with filters instead of the old language-specific parallel state machines. Bug 426271, r+sr=dbaron, b=vladimir